# trapezia

./: Cargo.toml  LICENSE-MIT  README.md
examples/: makeuser.rs  server.rs
src/: lib.rs  session.rs  user.rs
src/appauth/: mod.rs  postgres_redis.rs
src/session/: memory.rs  redis.rs
src/strategy/: bankid.rs  magic_link.rs  mod.rs  password.rs
src/user/: postgres.rs
src/username/: ascii.rs  email.rs  mod.rs
