[package]
name = "trapezia"
description = "Authentication and authorization tools"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
argon2 = { version = "0.4.1", features = ["std"] }
async-trait = "0.1.64"
bankid = { version = "0.1.0", path = "../bankid-rs", optional = true }
chrono = { version = "0.4.23", features = ["serde"] }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"], optional = true } 
deadpool-redis = "0.11.1"
nova = "0.5.4"
rand = "0.8.5"
redis = { version = "0.22.3", features = ["tokio-comp"] }
secrecy = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "macros"] }
thiserror = "1.0.38"
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
validator = "0.16.0"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros"] }

[features]
default = []
bankid = ["dep:bankid"]
