[package]
name = "trapezia"
description = "Authentication and authorization tools"
version = "0.2.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
argon2 = { version = "0.5.1", features = ["std"] }
async-trait = "0.1.64"
bankid = { git = "https://github.com/necessary-nu/bankid-rs", features = ["native-tls"], optional = true }
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
deadpool-redis = "0.12"
hmac = { version = "0.12.1", features = ["std"] }
nova = "0.5.4"
rand = "0.8.5"
redis = { version = "0.23.2", features = ["tokio-comp"] }
secrecy = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "macros"] }
thiserror = "1.0.38"
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
validator = "0.16.0"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros"] }

[features]
default = ["bankid"]
bankid = ["dep:bankid"]
